Fixed misaligned items in the navbar and added two piano videos

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -94,7 +94,7 @@ table td { border: 1px solid #e8e8e8; }
 .navbar { overflow: hidden; }
 
 /* Links inside the navbar */
-.navbar a { color: #2a7ae2; text-decoration: none; font-size: 16px; text-align: center; padding: 14px 16px; float: left; }
+.navbar a { color: #2a7ae2; text-decoration: none; font: 400 16px / 1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; text-align: center; padding: 14px 16px; float: left; }
 
 /* Add a grey background color to dropdown links on hover */
 .navbar a:hover { background-color: #ddd; }
@@ -103,7 +103,7 @@ table td { border: 1px solid #e8e8e8; }
 .dropdown { float: left; overflow: hidden; }
 
 /* Dropdown button */
-.dropdown .dropbtn { color: #2a7ae2; text-decoration: none; font-size: 16px; text-align: center; border: none; outline: none; padding: 14px 16px; background-color: inherit; font-family: inherit; /* Important for vertical align on mobile phones */ margin: 0; /* Important for vertical align on mobile phones */ }
+.dropdown .dropbtn { color: #2a7ae2; text-decoration: none; font: 400 16px / 1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; text-align: center; border: none; outline: none; padding: 14px 16px; background-color: inherit; font-family: inherit; /* Important for vertical align on mobile phones */ margin: 0; /* Important for vertical align on mobile phones */ }
 
 /* Dropdown content (hidden by default) */
 .dropdown-content { display: none; position: absolute; min-width: 160px; background-color: white; box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); }
